CMBSandbox4/src/objects/Commission__c.object
<CustomObject>
    <description>To create and track Commission</description>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <description>Date on which commission is approved.</description>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to denote weather commission is approved or not.</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commision_percentage__c</fullName>
        <description>Commission percentage</description>
        <label>Commission %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_Based_On_Invoice__c</fullName>
        <formula>Sales_Amount__c *  Commision_percentage__c</formula>
        <label>Commission $ Based On Invoice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_amount__c</fullName>
        <description>Commission amount</description>
        <inlineHelpText>Commission amount</inlineHelpText>
        <label>Commission $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <description>Date on which amount is paid</description>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Commission to be paid on or before</description>
        <inlineHelpText>Commission to be paid on or before</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_to_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Due to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Commissions</relationshipLabel>
        <relationshipName>Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Due to  pay to account</description>
        <label>Due to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commissions</relationshipLabel>
        <relationshipName>Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Date_Paid__c</fullName>
        <formula>Invoice__r.Date_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Paid_Amount__c</fullName>
        <formula>Invoice__r.Total_Amount_Paid__c</formula>
        <label>Invoice Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For the submissions whose invoice is paid.</description>
        <label>Invoice Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <formula>TEXT( Invoice__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Invoice</description>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Commissions</relationshipLabel>
        <relationshipName>Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Opportunity.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Commissions</relationshipLabel>
        <relationshipName>Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Amount__c</fullName>
        <description>Sales Amount</description>
        <inlineHelpText>Sales/Invoice Amount Subject to Commissions</inlineHelpText>
        <label>Sales/Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Current status of commission to be paid</description>
        <inlineHelpText>Current status of commission to be paid</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Request Payment</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - Ready to Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of commission</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Commission</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Override</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Commission</label>
    <listViews>
        <fullName>All_Closed</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Due_to_Contact__c</columns>
        <columns>Commision_percentage__c</columns>
        <columns>Commission_amount__c</columns>
        <columns>Amount_Paid__c</columns>
        <columns>Date_Paid__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Request Payment,Pending Revision,Approved - Ready to Pay</value>
        </filters>
        <label>All Closed</label>
        <sharedTo>
            <group>Accounting</group>
            <group>Office_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open</fullName>
        <columns>NAME</columns>
        <columns>Due_to_Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Commision_percentage__c</columns>
        <columns>Commission_amount__c</columns>
        <columns>Amount_Paid__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Cancelled</value>
        </filters>
        <label>All Open</label>
        <sharedTo>
            <group>Accounting</group>
            <group>Office_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approved_Pending_Pay</fullName>
        <columns>NAME</columns>
        <columns>Due_to_Contact__c</columns>
        <columns>Commision_percentage__c</columns>
        <columns>Commission_amount__c</columns>
        <columns>Amount_Paid__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Approved__c</columns>
        <columns>Approved_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved - Ready to Pay</value>
        </filters>
        <label>02. Approved - Ready to Pay</label>
        <sharedTo>
            <group>Accounting</group>
            <group>Office_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Payment_Requested</fullName>
        <columns>NAME</columns>
        <columns>Invoice__c</columns>
        <columns>Due_to_Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Commision_percentage__c</columns>
        <columns>Commission_amount__c</columns>
        <columns>Amount_Paid__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approved__c</columns>
        <columns>Approved_Date__c</columns>
        <columns>Invoice_Status__c</columns>
        <columns>Commission_Based_On_Invoice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Request Payment</value>
        </filters>
        <label>01. Payment Requested</label>
        <sharedTo>
            <group>Accounting</group>
            <group>Office_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X03_Paid</fullName>
        <columns>NAME</columns>
        <columns>Due_to_Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Commision_percentage__c</columns>
        <columns>Commission_amount__c</columns>
        <columns>Amount_Paid__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </filters>
        <label>03. Paid</label>
        <sharedTo>
            <group>Accounting</group>
            <group>Office_Managers</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>